--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li><span>English</span><br>Certainly, I know and am learning English, and my proficiency in it is C1.</li>
-                                <li><span>Web Development</span><br>As you probably already saw, I develop websites all by myself. My greatest work stands just before your eyes.</li>
+                                <li><span>Web Development</span><br>As you probably already saw, I develop websites all by myself. My greatest work stands just before your eyes.<br><br>At present, I know HTML, CSS, a bit of JavaScript, Git and Github.</li>
                                 <li><span>Communicability</span><br>It is really easy for me to get along with almost anyone, because I am a really tactful individual.</li>
                                 <li><span>Studying</span><br>I absorb new information like a sponge, because I am a quick-learner.</li>
                             </ul>
