--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/user.png">
+                        <img src="images/user.png" draggable="false">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">About Me</h1>
@@ -146,14 +146,14 @@
                 <h1 class="sub-title">My Work</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="images/work-1.png">
+                        <img src="images/work-1.png" draggable="false">
                         <div class="layer">
                             <h3>Personal Website</h3>
                             <p>You are Looking at It Right Now!</p>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-2.png">
+                        <img src="images/work-2.png" draggable="false">
                         <div class="layer">
                             <h3>Calculator</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-3.png">
+                        <img src="images/work-3.png" draggable="false">
                         <div class="layer">
                             <h3>List of Universities <br>and Their Requirements.</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
