--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <div id="wark">
             <div class="container">
                 <h1 class="sub-title">My Work</h1>
+                <p>Psst! Click on it if you are from mobile phone!</p>
                 <div class="work-list">
                     <div class="work">
                         <img src="images/work-1.png" draggable="false">
