--- a/index.html
+++ b/index.html
@@ -38,26 +38,8 @@
                     <span id="text1"></span>
                     <span id="text2"></span>
                 </div>
-                <svg id="filters">
-                    <defs>
-                        <filter id="threshold">
-                            <feColorMatrix in="SourceGraphic"
-                                    type="matrix"
-                                    values="1 0 0 0 0
-                                                    0 1 0 0 0
-                                                    0 0 1 0 0
-                                                    0 0 0 255 -140" />
-                        </filter>
-                    </defs>
-                </svg>
                 <div class="header-text">
-                    <h1>Hello, I'm 
-                        <main class="text-container">
-                            <svg class="text-stroke" viewBox="0 0 800 100" width="80%" height="100%">
-                                <text class="text" x="20" y="75">Baluanov  Danial</text>
-                            </svg>
-                        </main>
-                    from Kazakhstan</h1>
+                    <h1>Hello, I am <span>Baluanov Danial</span><br>From Kazakhstan.</h1>
                 </div>
             </div>
         </div>
@@ -95,6 +77,7 @@
                             <ul>
                                 <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 3/9. Received Financial aid for each one.</li>
                                 <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
+                                <li><span>Aqbota Olympiad in the social and Humanitarian Direction.</span><br>3rd Place.</li>
                                 <li><span>New ones coming soon</span><br>To be Announced.</li>
                             </ul>
                         </div>
@@ -151,7 +134,6 @@
                         <div class="layer">
                             <h3>Personal Website</h3>
                             <p>You are Looking at It Right Now!</p>
-                            <a href="https://personalwebsite2288.web.app"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                     <div class="work">
