--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <!-----About----->
+        <!-----About------>
         <div id="about">
             <div class="container">
                 <div class="row">
