--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span id="text2"></span>
                 </div>
                 <div class="header-text">
-                    <h1>Hello, I am <span>Baluanov Danial</span><br>From Kazakhstan.</h1>
+                    <h1>Hello, I am <br><span>Baluanov Danial</span><br>From Kazakhstan.</h1>
                 </div>
             </div>
         </div>
