--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div id="preloader"></div>
         <div id="header">
             <div class="container">
                 <nav>
@@ -76,7 +77,8 @@
                             <ul>
                                 <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 3/9. Received Financial aid for each one.</li>
                                 <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
-                                <li><span>Aqbota Olympiad in the social and Humanitarian Direction.</span><br>3rd Place.</li>
+                                <li><span>Aqbota Olympiad in the social and Humanitarian Direction</span><br>3rd Place.</li>
+                                <li><span>Duolingo English Test</span><br>I have scored ***/160.</li>
                                 <li><span>New ones coming soon</span><br>To be Announced.</li>
                             </ul>
                         </div>
@@ -130,14 +132,14 @@
                 <p>Psst! Click on it if you are from mobile phone!</p>
                 <div class="work-list">
                     <div class="work">
-                        <img src="images/work-1.png" draggable="false">
+                        <img src="images/work-1.jpg" draggable="false">
                         <div class="layer">
                             <h3>Personal Website</h3>
                             <p>You are Looking at It Right Now!</p>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-2.png" draggable="false">
+                        <img src="images/work-2.jpg" draggable="false">
                         <div class="layer">
                             <h3>Calculator</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
@@ -145,7 +147,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-3.png" draggable="false">
+                        <img src="images/work-3.jpg" draggable="false">
                         <div class="layer">
                             <h3>List of Universities <br>and Their Requirements.</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
