--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <script src="https://kit.fontawesome.com/8fd88ab3c9.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <!--ICON-->
-        <link rel="icon" href="/images/icon.png">
+        <link rel="icon" href="images/icon.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Website</title>
         <meta property="og:title" content="Danial B. Digital Portfolio">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="/images/icon.png">
+        <meta property="og:image" content="images/icon.png">
         <meta property="og:url" content="https://personalwebsite2288.web.app">
         <meta property="og:description" content="Personal Digital Portfolio of Baluanov Danial.">
         <meta property="og:locale" content="en_US">
@@ -141,9 +141,9 @@
                     <div class="work">
                         <img src="images/work-2.jpg" draggable="false">
                         <div class="layer">
-                            <h3>Calculator</h3>
+                            <h3>A Website Made for an Interior Designer</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
-                            <a href="https://calculator2288.web.app"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://ohkazakh.github.io/Interior-Design-Website/"><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                     <div class="work">
