--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
                         <!--Certificates-->
                         <div class="tab-contents" id="certificates">
                             <ul>
+                                <li><p>Text me <span>"Certificates"</span> to receive each certificate.</p></li>
                                 <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 3/9. Received Financial aid for each one.</li>
                                 <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
                                 <li><span>Aqbota Olympiad in the social and Humanitarian Direction</span><br>3rd Place.</li>
-                                <li><span>Duolingo English Test</span><br>I have scored ***/160.</li>
+                                <li><span>Duolingo English Test</span><br>I have scored 120/160.</li>
                                 <li><span>New ones coming soon</span><br>To be Announced.</li>
                             </ul>
                         </div>
@@ -175,7 +176,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>Copyright <i class="fa-regular fa-copyright"></i> Danial. Made by Baluanov Danial</p>
+                    <p>Copyright <i class="fa-regular fa-copyright"></i> Danial. Made by Baluanov Danial</p><a href="https://wa.me/7702883881"><i class="fa-brands fa-whatsapp" style="color: #ababab;"></i></a>
             </div>
         </div>
         <script defer src="app.js"></script>
