--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <!-----About------>
+        <!-----About----->
         <div id="about">
             <div class="container">
                 <div class="row">
