--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                         <!--Certificates-->
                         <div class="tab-contents" id="certificates">
                             <ul>
-                                <li><p>Text me <span>"Certificates"</span> to receive each certificate.</p></li>
-                                <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 3/9. Received Financial aid for each one.</li>
+                                <li><a href="certificates.html" target=”_blank”><i class="fa-solid fa-link"></i></a></li>
+                                <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 4/9. Received Financial aid for each one.</li>
                                 <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
                                 <li><span>Aqbota Olympiad in the social and Humanitarian Direction</span><br>3rd Place.</li>
                                 <li><span>Duolingo English Test</span><br>I have scored 120/160.</li>
@@ -144,7 +144,7 @@
                         <div class="layer">
                             <h3>A Website Made for an Interior Designer</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
-                            <a href="https://ohkazakh.github.io/Interior-Design-Website/"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://ohkazakh.github.io/Interior-Design-Website/" target=”_blank”><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                     <div class="work">
@@ -152,7 +152,7 @@
                         <div class="layer">
                             <h3>List of Universities <br>and Their Requirements.</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
-                            <a href="https://ohkazakh.github.io/uni-list/"><i class="fa-solid fa-link"></i></a>
+                            <a href="https://ohkazakh.github.io/uni-list/" target=”_blank”><i class="fa-solid fa-link"></i></a>
                         </div>
                     </div>
                 </div>
