--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                                 <li><span>Olimpiads</span><br>Numerous Diplomas of Merit.</li>
                                 <li><span>GPA</span><br>My current GPA is approximately 86%.</li>
                                 <li><span>Comprehension</span><br>The Subjects I Require I Understand with Ease and Speed.</li>
+                                <li><span>School</span><br>I was Accepted into the Canadian International School Astana, but Unfortunately had to Decline the Offer due to Financial Constraints.</li>
                             </ul>
                         </div>
                         <!--Plans-->
                         <div class="tab-contents" id="plans">
                             <ul>
-                                <li><span>Education</span><br>My Goal is to Study in the US or Canada.</li>
-                                <li><span>English</span><br>In Addition, Ace my IELTS/SAT Scores.</li>
-                                <li><span>Life</span><br>As Well as Educating Abroad, I Want to Live and Work There.</li>
+                                <li><span>Education</span><br>My Goal is to Study Computer Science major in the US or Canada.</li>
+                                <li><span>Standard English and Academic Proficiency Tests.</span><br>In Addition, Ace my IELTS and SAT Scores.</li>
                             </ul>
                         </div>
                     </div>
