--- a/certificates.html
+++ b/certificates.html
@@ -39,6 +39,7 @@
                     <div class="image"><span><img src="images/meta4.png"></span></div>
                     <div class="image"><span><img src="images/duolingo.png"></span></div>
                     <div class="image"><span><img src="images/aqbota.jpg"></span></div>
+                    <div class="image"><span><img src="images/kenguru.jpg"></span></div>
                 </div>
             </div>
             <div class="preview-box">
