--- a/certificates.html
+++ b/certificates.html
@@ -33,13 +33,14 @@
         <div class="body">
             <div class="wrapperprojects">
                 <div class="gallery">
+                    <div class="image"><span><img src="images/duolingo.png"></span></div>
+                    <div class="image"><span><img src="images/english8.jpeg"></span></div>
+                    <div class="image"><span><img src="images/aqbota.jpg"></span></div>
+                    <div class="image"><span><img src="images/kenguru.png"></span></div>
                     <div class="image"><span><img src="images/meta1.png"></span></div>
                     <div class="image"><span><img src="images/meta2.png"></span></div>
                     <div class="image"><span><img src="images/meta3.png"></span></div>
                     <div class="image"><span><img src="images/meta4.png"></span></div>
-                    <div class="image"><span><img src="images/duolingo.png"></span></div>
-                    <div class="image"><span><img src="images/aqbota.jpg"></span></div>
-                    <div class="image"><span><img src="images/kenguru.png"></span></div>
                 </div>
             </div>
             <div class="preview-box">
