--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 </li>
                                     
                                 <li><span>Leadership</span><br>
-                                    I have demonstrated leadership through project management, taking initiatives from concept through to completion. My leadership extends beyond just leading tasks; it involves inspiring and motivating team members to achieve shared goals.
+                                    I have demonstrated leadership through project management, taking initiatives from concept through to completion.
                                 </li>                                    
                             </ul>
                         </div>
@@ -97,12 +97,13 @@
                         <div class="tab-contents" id="certificates">
                             <ul>
                                 <li><a href="certificates.html" target=”_blank”><i class="fa-solid fa-link"></i></a></li>
-                                <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 4/9. Received Financial aid for each one.</li>
-                                <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
+                                <li><span>Duolingo English Test</span><br>I have scored 120/160.</li>
+                                <li><span>School Olympiad in English language</span><br>3rd Place.</li>
                                 <li><span>Aqbota Olympiad in the social and Humanitarian Direction</span><br>3rd Place.</li>
                                 <li><span>Kenguru Olympiad</span><br>3rd Place.</li>
-                                <li><span>Duolingo English Test</span><br>I have scored 120/160.</li>
                                 <li><span>New ones coming soon</span><br>To be Announced.</li>
+                                <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 4/9. Received Financial aid for each one.</li>
+                                <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
                             </ul>
                         </div>
                         <!--Academic Achievements-->
@@ -123,7 +124,7 @@
                                 <li><span>Projects</span><br>I plan to create more websites and web applications to enhance my skills and portfolio.</li>
                                 <li><span>Internships</span><br>I plan to participate in internships to gain practical experience and apply my knowledge in real-world settings.</li>
                                 <li><span>Volunteering</span><br>I plan to volunteer in various organizations to give back to the community and develop my leadership skills.</li>
-                                <li><span>Standard English and Academic Proficiency Tests.</span><br>In Addition, Ace my IELTS and SAT Scores.</li>
+                                <li><span>Standard English and Academic Proficiency Tests.</span><br>I plan to ace my IELTS and SAT Scores.</li>
                                 <li><span>Travel</span><br>I plan to travel to different countries to learn about new cultures and meet new people.</li>
                                 <li><span>Personal Growth</span><br>I plan to continue developing my soft skills and improving my communication and leadership abilities.</li>
                             </ul>
