--- a/certificates.html
+++ b/certificates.html
@@ -4,13 +4,13 @@
         <script src="https://kit.fontawesome.com/8fd88ab3c9.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <!--ICON-->
-        <link rel="icon" href="images/icon.png">
+        <link rel="icon" href="images/icon.webp">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Website</title>
         <meta property="og:title" content="Danial B. Digital Portfolio">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="images/icon.png">
+        <meta property="og:image" content="images/icon.webp">
         <meta property="og:url" content="https://personalwebsite2288.web.app">
         <meta property="og:description" content="Personal Digital Portfolio of Baluanov Danial.">
         <meta property="og:locale" content="en_US">
@@ -22,7 +22,7 @@
         <div id="preloader"></div>
         <div class="cont">
             <nav>
-                <img src="images/Logo.png" alt="logo" class="logo">
+                <img src="images/Logo.webp" alt="logo" class="logo">
                 <ul>
                     <li><a href="index.html" target=”_blank”>Home</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -33,14 +33,15 @@
         <div class="body">
             <div class="wrapperprojects">
                 <div class="gallery">
-                    <div class="image"><span><img src="images/duolingo.png"></span></div>
-                    <div class="image"><span><img src="images/english8.jpeg"></span></div>
-                    <div class="image"><span><img src="images/aqbota.jpg"></span></div>
-                    <div class="image"><span><img src="images/kenguru.png"></span></div>
-                    <div class="image"><span><img src="images/meta1.png"></span></div>
-                    <div class="image"><span><img src="images/meta2.png"></span></div>
-                    <div class="image"><span><img src="images/meta3.png"></span></div>
-                    <div class="image"><span><img src="images/meta4.png"></span></div>
+                    <div class="image"><span><img src="images/duolingo.webp"></span></div>
+                    <div class="image"><span><img src="images/english8.webp"></span></div>
+                    <div class="image"><span><img src="images/aqbota.webp"></span></div>
+                    <div class="image"><span><img src="images/kenguru.webp"></span></div>
+                    <div class="image"><span><img src="images/meta1.webp"></span></div>
+                    <div class="image"><span><img src="images/meta2.webp"></span></div>
+                    <div class="image"><span><img src="images/meta3.webp"></span></div>
+                    <div class="image"><span><img src="images/meta4.webp"></span></div>
+                    <div class="image"><span><img src="images/rec1.webp"></span></div>
                 </div>
             </div>
             <div class="preview-box">
