--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <script src="https://kit.fontawesome.com/8fd88ab3c9.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <!--ICON-->
-        <link rel="icon" href="images/icon.png">
+        <link rel="icon" href="images/icon.webp">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Website</title>
         <meta property="og:title" content="Danial B. Digital Portfolio">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="images/icon.png">
+        <meta property="og:image" content="images/icon.webp">
         <meta property="og:url" content="https://personalwebsite2288.web.app">
         <meta property="og:description" content="Personal Digital Portfolio of Baluanov Danial.">
         <meta property="og:locale" content="en_US">
@@ -23,7 +23,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="images/Logo.png" alt="logo" class="logo">
+                    <img src="images/Logo.webp" alt="logo" class="logo">
                     <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About me</a></li>
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="images/user.png" draggable="false">
+                        <img src="images/user.webp" draggable="false">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">About Me</h1>
@@ -104,6 +104,7 @@
                                 <li><span>New ones coming soon</span><br>To be Announced.</li>
                                 <li><span>Coursera, Meta Front-End Developer</span><br>In progress. Completed 4/9. Received Financial aid for each one.</li>
                                 <li><span>Coursera, Yale University Connected Leadership</span><br>In Progress. Received Financial aid.</li>
+                                <li><span>Reccomendational Letter</span><br>Was one of the organizers and presenters of the UNDP presence at Eurofest 2024, organized by the Delegation of the European Union in Kazakhstan. Received Letter of Reccomendation from OLS.</li>
                             </ul>
                         </div>
                         <!--Academic Achievements-->
@@ -163,14 +164,14 @@
                 <p>Psst! Click on it if you are from mobile phone!</p>
                 <div class="work-list">
                     <div class="work">
-                        <img src="images/work-1.jpg" draggable="false">
+                        <img src="images/work-1.webp" draggable="false">
                         <div class="layer">
                             <h3>Personal Website</h3>
                             <p>You are Looking at It Right Now!</p>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-2.jpg" draggable="false">
+                        <img src="images/work-2.webp" draggable="false">
                         <div class="layer">
                             <h3>A Website Made for an Interior Designer</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
@@ -178,7 +179,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/work-3.jpg" draggable="false">
+                        <img src="images/work-3.webp" draggable="false">
                         <div class="layer">
                             <h3>List of Universities <br>and Their Requirements.</h3>
                             <p>You Can See it by Clicking the Link Below!</p>
