--- a/certificates.html
+++ b/certificates.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="images/icon.webp">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Website</title>
+        <title>My Certificates</title>
         <meta property="og:title" content="Danial B. Digital Portfolio">
         <meta property="og:type" content="website">
         <meta property="og:image" content="images/icon.webp">
