--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="images/Logo.webp" alt="logo" class="logo">
+                    <img src="images/logo.webp" alt="logo" class="logo">
                     <ul id="sidemenu">
                         <li><a href="#header">Home</a></li>
                         <li><a href="#about">About me</a></li>
