--- a/certificates.html
+++ b/certificates.html
@@ -37,10 +37,6 @@
                     <div class="image"><span><img src="images/english8.webp"></span></div>
                     <div class="image"><span><img src="images/aqbota.webp"></span></div>
                     <div class="image"><span><img src="images/kenguru.webp"></span></div>
-                    <div class="image"><span><img src="images/meta1.webp"></span></div>
-                    <div class="image"><span><img src="images/meta2.webp"></span></div>
-                    <div class="image"><span><img src="images/meta3.webp"></span></div>
-                    <div class="image"><span><img src="images/meta4.webp"></span></div>
                     <div class="image"><span><img src="images/rec1.webp"></span></div>
                 </div>
             </div>
@@ -62,12 +58,12 @@
                 <div class="row">
                     <div class="contact-left">
                         <h1 class="sub-title">Contact Me</h1>
-                        <p><i class="fa-solid fa-envelope"></i> danbaluanov@bk.ru</p>
+                        <p><i class="fa-solid fa-envelope"></i> danbaluanov@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i> +77072883881</p>
                         <div class="social-icons">
                             <a href="https://www.instagram.com/ohkazakh/" target=”_blank”><i class="fa-brands fa-instagram"></i></a>
                             <a href="https://twitter.com/OhKazakh" target=”_blank”><i class="fa-brands fa-x-twitter"></i></a>
-                            <a href="https://t.co/SpjChx7kIk" target=”_blank”><i class="fa-brands fa-paypal"></i></a>
+                            <a href="paypal.me/OhKazakh" target=”_blank”><i class="fa-brands fa-paypal"></i></a>
                             <a href="https://wa.me/77072883881" target=”_blank”><i class="fa-brands fa-whatsapp"></i></a>
                         </div>
                     </div>
