--- a/certificates.html
+++ b/certificates.html
@@ -22,7 +22,7 @@
         <div id="preloader"></div>
         <div class="cont">
             <nav>
-                <img src="images/Logo.webp" alt="logo" class="logo">
+                <img src="images/logo.webp" alt="logo" class="logo">
                 <ul>
                     <li><a href="index.html" target=”_blank”>Home</a></li>
                     <li><a href="#contact">Contact</a></li>
